src/main.css
*,
*:before,
*:after {
  box-sizing: inherit;
}
html {
  box-sizing: border-box;
  font-size: 62.5%; /* 10/16*100 i.e. 10px is default size */
}
:root {
  --background: #0e0d45;
  --text: #acaaf5;
  --background-opacity: rgb(48, 42, 230, 0.1);
}

body {
  height: 100%;
  background: var(--background);
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  transition: background 0.2s linear;
  color: var(--text);
}
h1,
h2 {
  margin: 0;
}
header {
  background: var(--text);
  height: 8vh;
  display: flex;
  align-items: center;
}
.container {
  width: 90%;
  margin: 0 auto;
  max-width: 600px;
}
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--background);
  padding: 1rem;
  font-size: larger;
}
.checkbox {
  opacity: 0;
  position: absolute;
}
.label {
  background-color: var(--background);
  border-radius: 5rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem;
  position: relative;
  height: 3rem;
  width: 5.4rem;
  font-size: 2rem;
}

.label .ball {
  background-color: var(--text);
  border-radius: 50%;
  position: absolute;
  top: 4px;
  left: 4px;
  height: 2.2rem;
  width: 2.2rem;
  transform: translateX(0);
  transition: transform 0.2s linear;
}
.checkbox:checked + .label .ball {
  transform: translateX(24px);
}

.fa-moon {
  color: #f1c40f;
}

.switch-sun {
  color: #1d198a;
}

.light-theme {
  --background: #acaaf5;
  --text: #0e0d45;
}
main {
  height: 86vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
form {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}
.fa-search-location {
  position: absolute;
  top: 0.8rem;
  left: 0.8rem;
  font-size: 2.4rem;
}
.search__query {
  padding: 3rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.search__query--input {
  padding: 1.2rem;
  padding-left: 4rem;
  border-radius: 0 2rem 0 2rem;
  width: 100%;
  max-width: 45rem;
  border: none;
  outline: none;
  font-size: 1.4rem;
}

.searched__response {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  flex-direction: column;
  height: 80%;
  background: var(--background-opacity);
  border-radius: 2rem;
  width: 80%;
}
.default {
  font-size: 3rem;
  text-align: center;
}
.box {
  width: 200px;
  height: 200px;
  font-size: 30px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
[class*='loader'] {
  display: inline-block;
  width: 2em;
  height: 2em;
  color: inherit;
  vertical-align: middle;
  pointer-events: none;
}
.loader {
  position: relative;
}
.loader:before,
.loader:after {
  position: absolute;
  content: '';
}
.loader:before {
  width: 80%;
  height: 80%;
  left: 20%;
  bottom: 10%;
  border-radius: 100% 100% 100% 0;
  box-shadow: 0px 0px 0px 0.1em currentcolor;
  animation: loader 1s linear infinite;
  transform: rotate(-46deg);
}
.loader:after {
  width: 2.5em;
  height: 0.6em;
  border-radius: 100%;
  left: 0;
  background-color: rgba(255, 255, 255, 0.2);
  bottom: -0.4em;
  z-index: -1;
}
@keyframes loader {
  0% {
    top: 0;
  }
  50% {
    top: -5px;
  }
  100% {
    top: 0;
  }
}

.fa-map-marker-alt {
  font-size: 2.2rem;
}
.icon__box {
  margin-right: 1rem;
  align-self: center;
}
.searched__response--location {
  font-size: 2rem;
  display: flex;
  align-items: baseline;
}
.date__now {
  font-size: 1.4rem;
}
.searched__temp {
  font-size: 10rem;
  height: 40%;
  display: flex;
  align-items: center;
}
.weather__icon {
  font-size: 10rem;
}
.searched__weather--type {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}
.searched__weather--type p {
  font-size: 2rem;
}
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff;
  font-size: 1.5rem;
  height: 6vh;
  color: #6e6aae;
}
footer a {
  text-decoration: none;
  color: #302ae6;
  cursor: pointer;
}

